[package]
name = "portfolio-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }  # Command-line argument parsing
reqwest = { version = "0.11", features = ["json"] }  # HTTP client for API calls
serde = { version = "1.0", features = ["derive"] }  # JSON serialization/deserialization
tokio = { version = "1.0", features = ["full"] }  # Async runtime for handling requests
anyhow = "1.0"  # Error handling